[project]
name = "safety-nas"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
  "f110-gym",
  ""packages/f110_planning[test]"",
  ""packages/f110_scripts[test]"",
  "ipython>=8.0.0",
  "matplotlib>=3.7.0",
  "numpy>=1.23.5",
  "optuna>=3.0.0",
  "pandas>=1.5.3",
  "Pillow>=9.4.0",
  "pyyaml>=6.0",
  "torch>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mock",
  "pylint",
]

[tool.setuptools]
packages = []
